Refactor layout by removing sidebar and updating text
Removed the sidebar section and updated the main content text for clarity.

--- a/index.html
+++ b/index.html
@@ -29,18 +29,10 @@
                 </div>
             </div>
 
-            <div id="side_bar">
-                <div id="nav_icon">
-                    <h3><i class="ri-list-check"></i></h3>
-                    <h3><i class="ri-soundcloud-line"></i></h3>
-                    <h3><i class="ri-time-zone-line"></i></h3>
-                    <h3><i class="ri-calendar-line"></i></h3>
-                    <h3><i class="ri-settings-5-line"></i></h3>
-                </div>
-            </div>
+
             <div id="mid-content">
-                <h1>Check near you.</h1>
-                <p>Check weather near you so <br> are always one step ahead <br> plan your day and make most out of it.</p>
+                <h1>Know the weather near you.</h1>
+                <p>Stay ahead, stay ready. <br> Plan your day the smart way.</p>
             </div>
             <div id="side-content">
                 <h2 id="cityName">🌍 Enter a city</h2>
@@ -59,4 +51,5 @@
     <script src="script.js"></script>
 </body>
 
+</html>
 </html>
